# lododo-bot

./: QUICKSTART.md  README.md  ROBOT_SPECS.md  TECHNICAL_DESIGN.md  create_packages.sh  install_dependencies.sh  requirements.txt  setup_structure.sh
bot_bringup/: package.xml  setup.py
bot_bringup/launch/: simulation.launch.py  simulation_gazebo.launch.py  simulation_nav2.launch.py  simulation_nav2_vio.launch.py
bot_bringup/scripts/: README_TF_CALCULATOR.md  tf_calculator.py
bot_control/: package.xml  setup.py
bot_control/bot_control/: omni_controller.py  wheel_joint_publisher.py
bot_description/: package.xml  setup.cfg  setup.py
bot_description/bot_description/: bot_description.py
bot_description/launch/py/: view_bot_launch.py
bot_description/urdf/: LeKiwi.urdf  LeKiwi.urdf.bak  lekiwi.rviz  lekiwi_bot.gazebo.xacro  lekiwi_bot.rviz  lekiwi_bot.urdf  lekiwi_bot.xacro  lekiwi_bot_sim.xacro  rviz2.rviz
bot_gazebo/: package.xml  setup.cfg  setup.py
bot_gazebo/config/: gazebo_bot.rviz
bot_gazebo/launch/: gazebo.launch.py
bot_gazebo/worlds/: cafe.world  empty.world  empty_test.world  simple_obstacles.world  textured_test.world
bot_hardware/: package.xml  setup.cfg  setup.py
bot_navigation/: package.xml  setup.py
bot_navigation/config/: nav2.rviz  robot_localization.yaml  rtabmap_odom.yaml  slam_toolbox.yaml  slam_toolbox_vio.yaml
bot_navigation/config/nav2/: nav2_params.yaml
bot_navigation/launch/: navigation.launch.py  visual_odom.launch.py
bot_perception/: package.xml  setup.cfg  setup.py
bot_perception/bot_perception/: depth_to_laserscan.py
bot_perception/launch/: perception.launch.py
bot_perception/scripts/: run_with_venv.sh
bot_slam/: package.xml  setup.py
bot_teleop/: package.xml  setup.py
bot_teleop/bot_teleop/: keyboard_teleop.py
bot_teleop/launch/: keyboard_teleop.launch.py
bot_voice/: package.xml  setup.cfg  setup.py
