<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bot_bringup</name>
  <version>0.0.0</version>
  <description>Robot bringup package for LeKiwi bot / LeKiwi机器人启动包</description>
  <maintainer email="jeladeer@msn.com">hurry</maintainer>
  <license>Apache-2.0</license>

  <!-- Core ROS2 Dependencies / 核心 ROS2 依赖 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <!-- Launch Dependencies / 启动依赖 -->
  <exec_depend>bot_description</exec_depend>
  <exec_depend>bot_gazebo</exec_depend>
  <exec_depend>bot_control</exec_depend>
  <exec_depend>bot_perception</exec_depend>
  <exec_depend>bot_navigation</exec_depend>
  
  <!-- Visual Odometry Dependencies for simulation_nav2_vio.launch.py -->
  <!-- VIO 依赖用于 simulation_nav2_vio.launch.py -->
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
