<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bot_description</name>
  <version>0.0.0</version>
  <description>URDF models and robot description for the robotic bot</description>
  <maintainer email="contect@lododo.org">lododo</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>