<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bot_navigation</name>
  <version>0.0.0</version>
  <description>Navigation package for LeKiwi bot / LeKiwi机器人导航包</description>
  <maintainer email="jeladeer@msn.com">hurry</maintainer>
  <license>Apache-2.0</license>

  <!-- Core ROS2 Dependencies / 核心 ROS2 依赖 -->
  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- Visual Odometry Dependencies / 视觉里程计依赖 -->
  <!-- RTAB-Map odometry for visual feature tracking -->
  <!-- RTAB-Map 里程计用于视觉特征追踪 -->
  <depend>rtabmap_odom</depend>
  
  <!-- Robot Localization for sensor fusion (EKF) -->
  <!-- Robot Localization 用于传感器融合 (EKF) -->
  <depend>robot_localization</depend>
  
  <!-- Topic Tools for odometry relay -->
  <!-- Topic Tools 用于里程计中继 -->
  <depend>topic_tools</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
